# VoiceEngine

./: .gitignore  CMakeLists.txt  Extra info.txt  README.md  Structure.txt  build.bat  build_and_run.bat  filelist.txt
app/: main.cpp
include/voice_engine/audio/: AudioInputDevice.h  AudioOutputDevice.h  AudioPreprocessor.h  IAudioFileInput.h  IAudioInput.h  IAudioOutput.h  MicAudioInput.h  SpeakerAudioOutput.h  WavAudioInput.h
include/voice_engine/core/: AudioBuffer.h  AudioTypes.h  ErrorTypes.h  PathUtils.h  VoiceConfig.h
include/voice_engine/orchestration/: CommandRouter.h  InteractionLoop.h  VoiceEngine.h
include/voice_engine/providers/stt/: WhisperEngine.h.legacy
include/voice_engine/providers/tts/: PiperEngine.h
include/voice_engine/stt/: ISTTEngine.h  STTConfig.h  STTTypes.h  SpeechRecognizer.h  WhisperEngine.h
include/voice_engine/tts/: ITTSEngine.h  SpeechSynthesizer.h  TTSTypes.h
src/audio/: AudioInputDevice.cpp  AudioOutputDevice.cpp  AudioPreprocessor.cpp  MicAudioInput.cpp  SpeakerAudioOutput.cpp  WavAudioInput.cpp
src/core/: AudioBuffer.cpp  PathUtils.cpp
src/orchestration/: CommandRouter.cpp  InteractionLoop.cpp  VoiceEngine.cpp
src/providers/stt/: WhisperEngine.cpp.legacy
src/providers/tts/: PiperEngine.cpp
src/stt/: SpeechRecognizer.cpp  WhisperEngine.cpp
src/tts/: SpeechSynthesizer.cpp
